package tn.temporise.domain.model;

public enum Role {
    CLIENT,GESTIONNAIRE,ADMIN,REDACTEUR,SUPER_ADMIN
}
