package tn.temporise.domain.model;

public enum StatutCommande {
    EN_COURS, EXPEDIEE, LIVREE
}
